CHATS_SIT/force-app/main/default/objects/Canned_Report_Request_Filter__c.object
<CustomObject>
    <fields>
        <fullName>Canned_Report_Request__c</fullName>
        <label>Canned Report Request</label>
        <referenceTo>Canned_Report_Request__c</referenceTo>
        <relationshipLabel>Canned Report Request Filters</relationshipLabel>
        <relationshipName>Canned_Report_Request_Filters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Canned Report Filter External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Canned Report Request Filter</label>
    <nameField>
        <displayFormat>CRF-{0000}</displayFormat>
        <label>Canned Report Request Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Canned Report Request Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>